--- a/MyPad/Views/Dialogs/ChangeSyntaxDialog.xaml
+++ b/MyPad/Views/Dialogs/ChangeSyntaxDialog.xaml
@@ -12,16 +12,18 @@
              xmlns:ge="clr-namespace:SourceChord.GridExtra;assembly=GridExtra.Wpf"
              xmlns:behaviors="clr-namespace:MyPad.Views.Behaviors"
              mc:Ignorable="d"
-             p:ViewModelLocator.AutoWireViewModel="True">
-
-    <p:Dialog.WindowStyle>
-        <Style TargetType="{x:Type m:MetroWindow}" BasedOn="{StaticResource Common.Dialog}"/>
-    </p:Dialog.WindowStyle>
+             p:ViewModelLocator.AutoWireViewModel="True"
+             p:Dialog.WindowStyle="{StaticResource Common.Dialog}"
+             Style="{StaticResource Common.DialogContent}">
 
     <Grid Margin="20 10 20 15" ge:GridEx.RowDefinition="*, 10, Auto"
           behaviors:KeyboardFocusManager.FocusedElement="{Binding ElementName=Syntax}">
         <Grid Grid.Row="0" VerticalAlignment="Center">
-            <ComboBox x:Name="Syntax" ItemsSource="{qc:Binding 'new string[] { string.Empty }.Concat($P.Keys)', P={Binding SyntaxService.Definitions, Mode=OneWay}}" SelectedValue="{qc:Binding Convert='$P ?? string.Empty', ConvertBack='string.IsNullOrEmpty($value) ? null : $value', P={Binding Syntax.Value, Mode=TwoWay}}" m:TextBoxHelper.Watermark="{le:Loc Label_Syntax}" m:TextBoxHelper.UseFloatingWatermark="True">
+            <ComboBox x:Name="Syntax"
+                      ItemsSource="{qc:Binding 'new string[] { string.Empty }.Concat($P.Keys)', P={Binding SyntaxService.Definitions, Mode=OneWay}}"
+                      SelectedValue="{qc:Binding Convert='$P ?? string.Empty', ConvertBack='string.IsNullOrEmpty($value) ? null : $value', P={Binding Syntax.Value, Mode=TwoWay}}"
+                      m:TextBoxHelper.Watermark="{le:Loc Label_SyntaxColoring}"
+                      m:TextBoxHelper.UseFloatingWatermark="True">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{qc:Binding 'string.IsNullOrEmpty($P) ? \'Plain Text\' : $P', P={Binding Mode=OneWay}}"/>
@@ -30,7 +32,7 @@
             </ComboBox>
         </Grid>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="{le:Loc Command_OK}" Command="{Binding OKCommand, Mode=Onetime}" Style="{StaticResource Common.AccentButton}" MinWidth="80" IsDefault="True"/>
+            <Button Content="{le:Loc Command_OK}" Command="{Binding OKCommand, Mode=Onetime}" Style="{DynamicResource Common.AccentButton}" MinWidth="80" IsDefault="True"/>
             <Border Width="10"/>
             <Button Content="{le:Loc Command_Cancel}" Command="{Binding CancelCommand, Mode=Onetime}" MinWidth="80" IsCancel="True"/>
         </StackPanel>
