--- a/MyPad/Views/Dialogs/CancelableConfirmDialog.xaml
+++ b/MyPad/Views/Dialogs/CancelableConfirmDialog.xaml
@@ -11,11 +11,9 @@
              xmlns:qc="http://QuickConverter.CodePlex.com/"
              xmlns:ge="clr-namespace:SourceChord.GridExtra;assembly=GridExtra.Wpf"
              mc:Ignorable="d"
-             p:ViewModelLocator.AutoWireViewModel="True">
-
-    <p:Dialog.WindowStyle>
-        <Style TargetType="{x:Type m:MetroWindow}" BasedOn="{StaticResource Common.Dialog}"/>
-    </p:Dialog.WindowStyle>
+             p:ViewModelLocator.AutoWireViewModel="True"
+             p:Dialog.WindowStyle="{StaticResource Common.Dialog}"
+             Style="{StaticResource Common.DialogContent}">
     
     <Grid Margin="20 10 20 15" ge:GridEx.RowDefinition="*, 10, Auto">
         <Grid Grid.Row="0" ge:GridEx.ColumnDefinition="Auto, 15, *" VerticalAlignment="Center">
