--- a/MyPad/Views/Dialogs/ChangePomodoroTimerDialog.xaml
+++ b/MyPad/Views/Dialogs/ChangePomodoroTimerDialog.xaml
@@ -13,11 +13,9 @@
              xmlns:behaviors="clr-namespace:MyPad.Views.Behaviors"
              xmlns:controls="clr-namespace:MyPad.Views.Controls"
              mc:Ignorable="d"
-             p:ViewModelLocator.AutoWireViewModel="True">
-
-    <p:Dialog.WindowStyle>
-        <Style TargetType="{x:Type m:MetroWindow}" BasedOn="{StaticResource Common.Dialog}"/>
-    </p:Dialog.WindowStyle>
+             p:ViewModelLocator.AutoWireViewModel="True"
+             p:Dialog.WindowStyle="{StaticResource Common.Dialog}"
+             Style="{StaticResource Common.DialogContent}">
 
     <Grid Margin="20 10 20 15" ge:GridEx.RowDefinition="*, 10, Auto"
           behaviors:KeyboardFocusManager.FocusedElement="{Binding ElementName=PomodoroDuration}">
@@ -39,7 +37,7 @@
                                     m:TextBoxHelper.SelectAllOnFocus="True"/>
         </Grid>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="{le:Loc Command_OK}" Command="{Binding OKCommand, Mode=Onetime}" Style="{StaticResource Common.AccentButton}" MinWidth="80" IsDefault="True"/>
+            <Button Content="{le:Loc Command_OK}" Command="{Binding OKCommand, Mode=Onetime}" Style="{DynamicResource Common.AccentButton}" MinWidth="80" IsDefault="True"/>
             <Border Width="10"/>
             <Button Content="{le:Loc Command_Cancel}" Command="{Binding CancelCommand, Mode=Onetime}" MinWidth="80" IsCancel="True"/>
         </StackPanel>
