--- a/MyPad/Views/Dialogs/SelectDiffFilesDialog.xaml
+++ b/MyPad/Views/Dialogs/SelectDiffFilesDialog.xaml
@@ -12,11 +12,9 @@
              xmlns:ge="clr-namespace:SourceChord.GridExtra;assembly=GridExtra.Wpf"
              mc:Ignorable="d"
              p:ViewModelLocator.AutoWireViewModel="True"
+             p:Dialog.WindowStyle="{StaticResource Common.Dialog}"
+             Style="{StaticResource Common.DialogContent}"
              Loaded="Dialog_Loaded">
-
-    <p:Dialog.WindowStyle>
-        <Style TargetType="{x:Type m:MetroWindow}" BasedOn="{StaticResource Common.Dialog}"/>
-    </p:Dialog.WindowStyle>
 
     <Grid Margin="20 10 20 15" ge:GridEx.RowDefinition="*, 10, Auto">
         <Grid Grid.Row="0" ge:GridEx.ColumnDefinition="*, 15, Auto, 15, *" VerticalAlignment="Center">
@@ -39,7 +37,7 @@
             </ComboBox>
         </Grid>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="{le:Loc Command_OK}" Command="{Binding OKCommand, Mode=Onetime}" Style="{StaticResource Common.AccentButton}" MinWidth="80" IsDefault="True"/>
+            <Button Content="{le:Loc Command_OK}" Command="{Binding OKCommand, Mode=Onetime}" Style="{DynamicResource Common.AccentButton}" MinWidth="80" IsDefault="True"/>
             <Border Width="10"/>
             <Button Content="{le:Loc Command_Cancel}" Command="{Binding CancelCommand, Mode=Onetime}" MinWidth="80" IsCancel="True"/>
         </StackPanel>
