--- a/MyPad/Views/Regions/MaintenanceContentView.xaml
+++ b/MyPad/Views/Regions/MaintenanceContentView.xaml
@@ -28,7 +28,7 @@
         </i:PropertyChangedTrigger>
     </i:Interaction.Triggers>
 
-    <Grid Margin="20 -25 20 10" MaxWidth="{StaticResource Const.MaxPageWidth}">
+    <Grid Margin="20 -25 20 10" MaxWidth="{StaticResource Const.BreakPoint.XL}">
         <TabControl Padding="10 5 5 0" m:HeaderedControlHelper.HeaderFontWeight="Bold" Background="Transparent">
             <TabControl.Resources>
                 <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource Common.DataGrid}">
