--- a/MyPad/Views/Styles/Base/Sizes.xaml
+++ b/MyPad/Views/Styles/Base/Sizes.xaml
@@ -1,9 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:s="clr-namespace:System;assembly=System.Runtime">
+                    xmlns:s="clr-namespace:System;assembly=System.Runtime"
+                    xmlns:ge="clr-namespace:SourceChord.GridExtra;assembly=GridExtra.Wpf">
 
     <!-- 定数 -->
-    <s:Double x:Key="Const.MaxPageWidth">1200</s:Double>
+    <s:Double x:Key="Const.BreakPoint.XL">1200</s:Double>
+    <ge:BreakPoints x:Key="Const.BreakPoints">576, 768, 992</ge:BreakPoints>
 
     <!-- 変数 -->
     <s:Double x:Key="Common.Size.Tile">100</s:Double>
